--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,31 +22,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v0/03v41tbn7072cjr0b3ddfgjw0000gn/T/ipykernel_55229/3087830493.py:2: DtypeWarning: Columns (0,9,12,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_rawdata = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv')\n"
+      "/var/folders/kr/_5c1r8bn52xbpgz96ksrtrj80000gn/T/ipykernel_75589/2853539196.py:2: DtypeWarning: Columns (0,9,12,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_rawdata2 = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv', encoding='GBK')\n"
      ]
     }
    ],
    "source": [
-    "# read csv file: 'Chinese Thermal Comfort Dataset Class II.csv'\n",
-    "df_rawdata = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv')"
+    "df_rawdata1 = pd.read_csv('Chinese Thermal Comfort Dataset Class I.csv', encoding='GBK')\n",
+    "df_rawdata2 = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv', encoding='GBK')\n",
+    "df_rawdata3 = pd.read_csv('Chinese Thermal Comfort Dataset Class III.csv', encoding='GBK')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'A. Basic Identifiers', 'Unnamed: 2', 'Unnamed: 3',\n",
+       "       'Unnamed: 4', 'Unnamed: 5', 'Unnamed: 6', 'B. Building Information',\n",
+       "       'Unnamed: 8', 'Unnamed: 9', 'Unnamed: 10', 'Unnamed: 11', 'Unnamed: 12',\n",
+       "       'C. Subject's Personal Information', 'Unnamed: 14', 'Unnamed: 15',\n",
+       "       'Unnamed: 16', 'Unnamed: 17',\n",
+       "       'D. Subjective Thermal Comfort Information', 'Unnamed: 19',\n",
+       "       'Unnamed: 20', 'Unnamed: 21', 'Unnamed: 22', 'Unnamed: 23',\n",
+       "       'E. Indoor Physical Parameters', 'Unnamed: 25', 'Unnamed: 26',\n",
+       "       'Unnamed: 27', 'Unnamed: 28', 'Unnamed: 29', 'Unnamed: 30',\n",
+       "       'Unnamed: 31', 'Unnamed: 32', 'Unnamed: 33', 'Unnamed: 34',\n",
+       "       'Unnamed: 35', 'Unnamed: 36', 'Unnamed: 37', 'Unnamed: 38',\n",
+       "       'Unnamed: 39', 'Unnamed: 40', 'Unnamed: 41',\n",
+       "       'F. Indoor Calculated Parameters', 'Unnamed: 43', 'Unnamed: 44',\n",
+       "       'Unnamed: 45', 'Unnamed: 46', 'G.Outdoor Environment Parameters',\n",
+       "       'Unnamed: 48', 'Unnamed: 49', 'Unnamed: 50', 'Unnamed: 51',\n",
+       "       'Unnamed: 52', 'Unnamed: 53'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_rawdata2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_rawdata.columns = df_rawdata.iloc[0]  # Set the first row as the column names\n",
-    "df_rawdata = df_rawdata[1:].reset_index(drop=True)  # Remove the first row and reset the index"
+    "# Remove the first row and make the first row as the column name for each dataframe\n",
+    "for df in [df_rawdata1, df_rawdata2, df_rawdata3]:\n",
+    "    df.columns = df.iloc[0]  # Set the first row as column names\n",
+    "    df.drop(index=0, inplace=True)  # Remove the first row\n",
+    "    df.reset_index(drop=True, inplace=True)  # Reset the index without adding the old index as a column\n"
    ]
   },
   {
@@ -277,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
