--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,63 +22,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/kr/_5c1r8bn52xbpgz96ksrtrj80000gn/T/ipykernel_75589/2853539196.py:2: DtypeWarning: Columns (0,9,12,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_rawdata2 = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv', encoding='GBK')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_rawdata1 = pd.read_csv('Chinese Thermal Comfort Dataset Class I.csv', encoding='GBK')\n",
-    "df_rawdata2 = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv', encoding='GBK')\n",
-    "df_rawdata3 = pd.read_csv('Chinese Thermal Comfort Dataset Class III.csv', encoding='GBK')"
+    "df_rawdata1 = pd.read_csv('Chinese Thermal Comfort Dataset Class I.csv', header=[0, 1], encoding='GBK')\n",
+    "df_rawdata2 = pd.read_csv('Chinese Thermal Comfort Dataset Class II.csv', header=[0, 1], encoding='GBK')\n",
+    "df_rawdata3 = pd.read_csv('Chinese Thermal Comfort Dataset Class III.csv', header=[0, 1], encoding='GBK')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'A. Basic Identifiers', 'Unnamed: 2', 'Unnamed: 3',\n",
-       "       'Unnamed: 4', 'Unnamed: 5', 'Unnamed: 6', 'B. Building Information',\n",
-       "       'Unnamed: 8', 'Unnamed: 9', 'Unnamed: 10', 'Unnamed: 11', 'Unnamed: 12',\n",
-       "       'C. Subject's Personal Information', 'Unnamed: 14', 'Unnamed: 15',\n",
-       "       'Unnamed: 16', 'Unnamed: 17',\n",
-       "       'D. Subjective Thermal Comfort Information', 'Unnamed: 19',\n",
-       "       'Unnamed: 20', 'Unnamed: 21', 'Unnamed: 22', 'Unnamed: 23',\n",
-       "       'E. Indoor Physical Parameters', 'Unnamed: 25', 'Unnamed: 26',\n",
-       "       'Unnamed: 27', 'Unnamed: 28', 'Unnamed: 29', 'Unnamed: 30',\n",
-       "       'Unnamed: 31', 'Unnamed: 32', 'Unnamed: 33', 'Unnamed: 34',\n",
-       "       'Unnamed: 35', 'Unnamed: 36', 'Unnamed: 37', 'Unnamed: 38',\n",
-       "       'Unnamed: 39', 'Unnamed: 40', 'Unnamed: 41',\n",
-       "       'F. Indoor Calculated Parameters', 'Unnamed: 43', 'Unnamed: 44',\n",
-       "       'Unnamed: 45', 'Unnamed: 46', 'G.Outdoor Environment Parameters',\n",
-       "       'Unnamed: 48', 'Unnamed: 49', 'Unnamed: 50', 'Unnamed: 51',\n",
-       "       'Unnamed: 52', 'Unnamed: 53'],\n",
-       "      dtype='object')"
+       "MultiIndex([(                      'Unnamed: 0_level_0', ...),\n",
+       "            (                    'A. Basic Identifiers', ...),\n",
+       "            (                      'Unnamed: 2_level_0', ...),\n",
+       "            (                      'Unnamed: 3_level_0', ...),\n",
+       "            (                      'Unnamed: 4_level_0', ...),\n",
+       "            (                      'Unnamed: 5_level_0', ...),\n",
+       "            (                      'Unnamed: 6_level_0', ...),\n",
+       "            (                 'B. Building Information', ...),\n",
+       "            (                      'Unnamed: 8_level_0', ...),\n",
+       "            (                      'Unnamed: 9_level_0', ...),\n",
+       "            (                     'Unnamed: 10_level_0', ...),\n",
+       "            (                     'Unnamed: 11_level_0', ...),\n",
+       "            (                     'Unnamed: 12_level_0', ...),\n",
+       "            (       'C. Subject's Personal Information', ...),\n",
+       "            (                     'Unnamed: 14_level_0', ...),\n",
+       "            (                     'Unnamed: 15_level_0', ...),\n",
+       "            (                     'Unnamed: 16_level_0', ...),\n",
+       "            (                     'Unnamed: 17_level_0', ...),\n",
+       "            ('D.Subjective Thermal Comfort Information', ...),\n",
+       "            (                     'Unnamed: 19_level_0', ...),\n",
+       "            (                     'Unnamed: 20_level_0', ...),\n",
+       "            (                     'Unnamed: 21_level_0', ...),\n",
+       "            (                     'Unnamed: 22_level_0', ...),\n",
+       "            (           'E. Indoor Physical Parameters', ...),\n",
+       "            (                     'Unnamed: 24_level_0', ...),\n",
+       "            (                     'Unnamed: 25_level_0', ...),\n",
+       "            (                     'Unnamed: 26_level_0', ...),\n",
+       "            (                     'Unnamed: 27_level_0', ...),\n",
+       "            (                     'Unnamed: 28_level_0', ...),\n",
+       "            (                     'Unnamed: 29_level_0', ...),\n",
+       "            (                     'Unnamed: 30_level_0', ...),\n",
+       "            (                     'Unnamed: 31_level_0', ...),\n",
+       "            (                     'Unnamed: 32_level_0', ...),\n",
+       "            (                     'Unnamed: 33_level_0', ...),\n",
+       "            (                     'Unnamed: 34_level_0', ...),\n",
+       "            (                     'Unnamed: 35_level_0', ...),\n",
+       "            (                     'Unnamed: 36_level_0', ...),\n",
+       "            (                     'Unnamed: 37_level_0', ...),\n",
+       "            (                     'Unnamed: 38_level_0', ...),\n",
+       "            (                     'Unnamed: 39_level_0', ...),\n",
+       "            (                     'Unnamed: 40_level_0', ...),\n",
+       "            (         'F. Indoor Calculated Parameters', ...),\n",
+       "            (                     'Unnamed: 42_level_0', ...),\n",
+       "            (                     'Unnamed: 43_level_0', ...),\n",
+       "            (                     'Unnamed: 44_level_0', ...),\n",
+       "            (                     'Unnamed: 45_level_0', ...),\n",
+       "            (        'G.Outdoor Environment Parameters', ...),\n",
+       "            (                     'Unnamed: 47_level_0', ...),\n",
+       "            (                     'Unnamed: 48_level_0', ...),\n",
+       "            (                     'Unnamed: 49_level_0', ...),\n",
+       "            (                     'Unnamed: 50_level_0', ...),\n",
+       "            (                     'Unnamed: 51_level_0', ...),\n",
+       "            (                     'Unnamed: 52_level_0', ...)],\n",
+       "           )"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_rawdata2.columns"
+    "df_rawdata1.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
