the probability of central heating is not reasonable

--- a/Data_cleaning.ipynb
+++ b/Data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "       'Henan Province, Luoyang City'], dtype=object)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "       'FujianProvinceNanpingCity'], dtype=object)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mannual find the january monthly outdoor temperature for each city\n",
-    "city_tout_jan = {\n",
+    "# mannual find the january (minimum?) monthly outdoor temperature for each city\n",
+    "city_t_out_min = {\n",
     "    \"HebeiProvinceHandanCity\": -7.28,  \n",
     "    \"HenanProvinceZhengzhouCity\": -5.6,  \n",
     "    \"TianjinCity\": -10.97,  \n",
@@ -234,7 +234,8 @@
     "    \"Turpan\": -16.5,  \n",
     "    \"HubeiProvinceWuhanCity\": -2.53,  \n",
     "    \"HunanProvinceChangshaCity\": -1.8,  \n",
-    "    \"YunnanProvinceKunmingCity\": 0.95,  \n",
+    "    \"YunnanProvinceKunmingCity\": 0.95,\n",
+    "    \"HenanProvinceLuoyangCity\": 0.00,  # Estimated \n",
     "    \"LhasaCity\": -7.02,  \n",
     "    \"HenanProvinceJiaozuoCity\": -5.05,  \n",
     "    \"SichuanProvinceZigongCity\": 2.19,  \n",
@@ -253,13 +254,13 @@
     "    \"FujianProvinceFuzhouCity\": 4.59,\n",
     "    \"HenanProvinceKaifengCity\": -6.2,\n",
     "}\n",
-    "# create a new column 't_out_jan' and in df_heating and assign the value to corresponding city\n",
-    "df_heating['t_out_jan'] = df_heating['A5.City'].map(city_tout_jan)"
+    "# create a new column 't_out_min' and in df_heating and assign the value to corresponding city\n",
+    "df_heating['t_out_min'] = df_heating['A5.City'].map(city_t_out_min)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +278,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,12 +297,14 @@
    "metadata": {},
    "source": [
     "## Use ASHRAE Thermal Comfort Database2 naming conventions\n",
-    "https://github.com/ruijis/ashrae-db-II\n"
+    "https://github.com/ruijis/ashrae-db-II\n",
+    "\n",
+    "cooling_type -> heating_type\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -325,11 +328,11 @@
        "       'G4.7-Day Running Mean Outdoor Temperature (℃)',\n",
        "       'G4.15-Day Running Mean Outdoor Temperature (℃)',\n",
        "       'G5.Mean Daily Outdoor Relative Humidity (%)',\n",
-       "       'G6.Mean Daily Outdoor Air Velocity (m/s)', 'latitude', 't_out_jan'],\n",
+       "       'G6.Mean Daily Outdoor Air Velocity (m/s)', 'latitude', 't_out_min'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +355,7 @@
     "df_heating = df_heating.rename(columns={'A5.City': 'city'})\n",
     "df_heating = df_heating.rename(columns={'A6.Climate Zone': 'climate'})\n",
     "df_heating = df_heating.rename(columns={'B1.Building Type': 'building_type'})\n",
-    "df_heating = df_heating.rename(columns={'B4.Building Operation Mode': 'cooling_type'})\n",
+    "df_heating = df_heating.rename(columns={'B4.Building Operation Mode': 'heating_type'})\n",
     "# rename personal conditions\n",
     "df_heating = df_heating.rename(columns={'C1.Sex': 'gender'})\n",
     "df_heating = df_heating.rename(columns={'C2.Age': 'age'})\n",
@@ -373,7 +376,7 @@
     "# rename outdoor temperature parameters\n",
     "df_heating = df_heating.rename(columns={'G1.Real-Time Outdoor Temperature (℃)': 't_out_realtime'})\n",
     "df_heating = df_heating.rename(columns={'G2.Mean Daily Outdoor Temperature (℃)': 't_out_daily'})\n",
-    "df_heating = df_heating.rename(columns={'G3.Monthly Mean Outdoor Temperature (℃)': 't_out'})\n",
+    "df_heating = df_heating.rename(columns={'G3.Monthly Mean Outdoor Temperature (℃)': 't_out_monthly'})\n",
     "df_heating = df_heating.rename(columns={'G4.7-Day Running Mean Outdoor Temperature (℃)': 't_out_7'})\n",
     "df_heating = df_heating.rename(columns={'G4.15-Day Running Mean Outdoor Temperature (℃)': 't_out_15'})\n"
    ]
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +409,7 @@
        "city                      object\n",
        "climate                   object\n",
        "building_type             object\n",
-       "cooling_type              object\n",
+       "heating_type              object\n",
        "gender                    object\n",
        "age                       object\n",
        "ht                       float64\n",
@@ -422,33 +425,33 @@
        "tg                       float64\n",
        "top                      float64\n",
        "tr                       float64\n",
-       "t_out                    float64\n",
+       "t_out_min                float64\n",
        "latitude                 float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# select a sbuset of columns\n",
-    "df_heating_1 = df_heating[['suject_id', 'timestamp', 'season', 'city', 'climate', 'building_type', 'cooling_type', 'gender', 'age', 'ht', 'wt', 'thermal_sensation', 'thermal_comfort', 'thermal_acceptability', 'clo', 'met', 'ta', 'rh', 'vel', 'tg', 'top', 'tr', 't_out', 'latitude']]\n",
+    "df_heating_1 = df_heating[['suject_id', 'timestamp', 'season', 'city', 'climate', 'building_type', 'heating_type', 'gender', 'age', 'ht', 'wt', 'thermal_sensation', 'thermal_comfort', 'thermal_acceptability', 'clo', 'met', 'ta', 'rh', 'vel', 'tg', 'top', 'tr', 't_out_min', 'latitude']]\n",
     "print(df_heating_1.shape)\n",
     "df_heating_1.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v0/03v41tbn7072cjr0b3ddfgjw0000gn/T/ipykernel_60903/2292325144.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/v0/03v41tbn7072cjr0b3ddfgjw0000gn/T/ipykernel_67950/2292325144.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +488,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +541,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -588,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +603,7 @@
        "city                       object\n",
        "climate                    object\n",
        "building_type              object\n",
-       "cooling_type               object\n",
+       "heating_type               object\n",
        "gender                     object\n",
        "age                       float64\n",
        "ht                        float64\n",
@@ -616,13 +619,13 @@
        "tg                        float64\n",
        "top                       float64\n",
        "tr                        float64\n",
-       "t_out                     float64\n",
+       "t_out_min                 float64\n",
        "latitude                  float64\n",
        "age_group                category\n",
        "dtype: object"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +655,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -670,10 +673,10 @@
     }
    ],
    "source": [
-    "# unique values of cooling_type\n",
-    "print(df_heating_2['cooling_type'].unique())\n",
-    "# check the cooling_type distribution\n",
-    "df_heating_2['cooling_type'].value_counts().plot(kind='bar', figsize=(20, 6))"
+    "# unique values of heating_type\n",
+    "print(df_heating_2['heating_type'].unique())\n",
+    "# check the heating_type distribution\n",
+    "df_heating_2['heating_type'].value_counts().plot(kind='bar', figsize=(20, 6))"
    ]
   },
   {
@@ -685,26 +688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_heating_1.to_csv('CN_DB.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
