--- a/Data_explore.ipynb
+++ b/Data_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "      <th>city</th>\n",
        "      <th>climate</th>\n",
        "      <th>building_type</th>\n",
-       "      <th>cooling_type</th>\n",
+       "      <th>heating_type</th>\n",
        "      <th>gender</th>\n",
        "      <th>age</th>\n",
        "      <th>ht</th>\n",
@@ -56,7 +56,7 @@
        "      <th>tg</th>\n",
        "      <th>top</th>\n",
        "      <th>tr</th>\n",
-       "      <th>t_out</th>\n",
+       "      <th>t_out_min</th>\n",
        "      <th>latitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -82,7 +82,7 @@
        "      <td>20.9</td>\n",
        "      <td>20.8</td>\n",
        "      <td>20.9</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>-7.28</td>\n",
        "      <td>36.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -106,7 +106,7 @@
        "      <td>20.9</td>\n",
        "      <td>20.8</td>\n",
        "      <td>20.9</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>-7.28</td>\n",
        "      <td>36.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -130,7 +130,7 @@
        "      <td>20.9</td>\n",
        "      <td>20.8</td>\n",
        "      <td>20.9</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>-7.28</td>\n",
        "      <td>36.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -154,7 +154,7 @@
        "      <td>20.9</td>\n",
        "      <td>20.8</td>\n",
        "      <td>20.9</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>-7.28</td>\n",
        "      <td>36.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -178,7 +178,7 @@
        "      <td>19.8</td>\n",
        "      <td>20.0</td>\n",
        "      <td>19.8</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>-7.28</td>\n",
        "      <td>36.62</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -194,24 +194,24 @@
        "3          4  1/30/19 10:47  Winter Season  HebeiHandan  Cold zone   \n",
        "4          5  1/31/19 20:20  Winter Season  HebeiHandan  Cold zone   \n",
        "\n",
-       "  building_type      cooling_type  gender    age     ht  ...   clo  met    ta  \\\n",
+       "  building_type      heating_type  gender    age     ht  ...   clo  met    ta  \\\n",
        "0   Residential  Radiator heating  Female  18-30  170.0  ...  1.10  1.0  21.5   \n",
        "1   Residential  Radiator heating  Female  41-50  168.0  ...  1.83  0.9  21.5   \n",
        "2   Residential  Radiator heating    Male  41-50  170.0  ...  1.36  0.9  21.5   \n",
        "3   Residential  Radiator heating    Male  18-30  178.0  ...  1.58  0.9  21.5   \n",
        "4   Residential  Radiator heating    Male  18-30  174.0  ...  1.38  0.9  20.9   \n",
        "\n",
-       "     rh  vel    tg   top    tr  t_out  latitude  \n",
-       "0  32.0  0.0  20.9  20.8  20.9    0.4     36.62  \n",
-       "1  32.0  0.0  20.9  20.8  20.9    0.4     36.62  \n",
-       "2  32.0  0.0  20.9  20.8  20.9    0.4     36.62  \n",
-       "3  32.0  0.0  20.9  20.8  20.9    0.4     36.62  \n",
-       "4  33.0  0.0  19.8  20.0  19.8    0.4     36.62  \n",
+       "     rh  vel    tg   top    tr  t_out_min  latitude  \n",
+       "0  32.0  0.0  20.9  20.8  20.9      -7.28     36.62  \n",
+       "1  32.0  0.0  20.9  20.8  20.9      -7.28     36.62  \n",
+       "2  32.0  0.0  20.9  20.8  20.9      -7.28     36.62  \n",
+       "3  32.0  0.0  20.9  20.8  20.9      -7.28     36.62  \n",
+       "4  33.0  0.0  19.8  20.0  19.8      -7.28     36.62  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,20 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['suject_id', 'timestamp', 'season', 'city', 'climate', 'building_type',\n",
-       "       'cooling_type', 'gender', 'age', 'ht', 'wt', 'thermal_sensation',\n",
+       "       'heating_type', 'gender', 'age', 'ht', 'wt', 'thermal_sensation',\n",
        "       'thermal_comfort', 'thermal_acceptability', 'clo', 'met', 'ta', 'rh',\n",
-       "       'vel', 'tg', 'top', 'tr', 't_out', 'latitude'],\n",
+       "       'vel', 'tg', 'top', 'tr', 't_out_min', 'latitude'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,9 +248,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"Column(s) ['t_out'] do not exist\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/v0/03v41tbn7072cjr0b3ddfgjw0000gn/T/ipykernel_66346/1178363561.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# group by city, using mean values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m df_city = df.groupby('city').agg(\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mrecords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'city'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'size'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mthermal_sensation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'thermal_sensation'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'mean'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mthermal_comfort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'thermal_comfort'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'mean'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/groupby/generic.py\u001b[0m in \u001b[0;36maggregate\u001b[0;34m(self, func, engine, engine_kwargs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    893\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m         \u001b[0mop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGroupByApply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_dict_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/apply.py\u001b[0m in \u001b[0;36magg\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_dict_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 172\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg_dict_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mis_list_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m             \u001b[0;31m# we require a list, but not a 'str'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/apply.py\u001b[0m in \u001b[0;36magg_dict_like\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    494\u001b[0m             \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_selection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    495\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 496\u001b[0;31m         \u001b[0marg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize_dictlike_arg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"agg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mselected_obj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    497\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    498\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mselected_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/apply.py\u001b[0m in \u001b[0;36mnormalize_dictlike_arg\u001b[0;34m(self, how, obj, func)\u001b[0m\n\u001b[1;32m    617\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    618\u001b[0m                 \u001b[0mcols_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 619\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Column(s) {cols_sorted} do not exist\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    620\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    621\u001b[0m         \u001b[0maggregator_types\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"Column(s) ['t_out'] do not exist\""
+     ]
+    }
+   ],
    "source": [
     "# group by city, using mean values\n",
     "df_city = df.groupby('city').agg(\n",
@@ -1517,8 +1533,8 @@
    ],
    "source": [
     "# Data for the two box plots\n",
-    "data_naturally_ventilated = df[(df['city'] == 'HenanNanyang') & (df['cooling_type'] == 'Naturally Ventilated')]['ta']\n",
-    "data_air_conditioning_heating = df[(df['city'] == 'HenanNanyang') & (df['cooling_type'] == 'Air conditioning heating')]['ta']\n",
+    "data_naturally_ventilated = df[(df['city'] == 'HenanNanyang') & (df['heating_type'] == 'Naturally Ventilated')]['ta']\n",
+    "data_air_conditioning_heating = df[(df['city'] == 'HenanNanyang') & (df['heating_type'] == 'Air conditioning heating')]['ta']\n",
     "\n",
     "# Create the box plot\n",
     "plt.figure(figsize=(10, 6))\n",
