calculate the probabilty of central heating for each city

--- a/Data_cleaning.ipynb
+++ b/Data_cleaning.ipynb
@@ -57,6 +57,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'A1.Code', 'A2.Date', 'A3.Data Contributor', 'A4.Season',\n",
+       "       'A5.City', 'A6.Climate Zone', 'B1.Building Type',\n",
+       "       'B2.Building Function', 'B3.Floors', 'B4.Building Operation Mode',\n",
+       "       'B5.Room (Length×Width)', 'B5.Room Height (m)', 'C1.Sex', 'C2.Age',\n",
+       "       'C3.Height（cm）', 'C4.Weight（kg）', 'C5.Living Years', 'D1.TSV', 'D2.TCV',\n",
+       "       'D3.TAV', 'D5.Clothing Insulation (clo)', 'D6.Metabolic Rate (met)',\n",
+       "       'Measured Height (m)', 'E1.Indoor Air Temperature (℃)',\n",
+       "       'E2.Indoor Relative Humidity (%)', 'E3.Indoor Air Velocity (m/s)',\n",
+       "       'E4.Globe Temperature (℃)', 'E5.Roof Temperature (℃)',\n",
+       "       'E5.Wall Temperature (℃)', 'E5.Floor Temperature (℃)',\n",
+       "       'F1.Operative Temperature (℃)', 'F2.Mean Radiant Temperature (℃)',\n",
+       "       'F3.Radiant Temperature Asymmetry (℃)', 'F4.PMV', 'F5.PPD',\n",
+       "       'G1.Real-Time Outdoor Temperature (℃)',\n",
+       "       'G2.Mean Daily Outdoor Temperature (℃)',\n",
+       "       'G3.Monthly Mean Outdoor Temperature (℃)',\n",
+       "       'G4.7-Day Running Mean Outdoor Temperature (℃)',\n",
+       "       'G4.15-Day Running Mean Outdoor Temperature (℃)',\n",
+       "       'G5.Mean Daily Outdoor Relative Humidity (%)',\n",
+       "       'G6.Mean Daily Outdoor Air Velocity (m/s)'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_rawdata.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -677,6 +716,24 @@
     "print(df_heating_2['heating_type'].unique())\n",
     "# check the heating_type distribution\n",
     "df_heating_2['heating_type'].value_counts().plot(kind='bar', figsize=(20, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Office']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check Xi'an building type unique values\n",
+    "print(df_heating_2[df_heating_2['city'] == \"ShaanxiXi'an\"]['building_type'].unique())"
    ]
   },
   {
