changing the research question from Ta to DeltaTa

--- a/Fuzzy RD.ipynb
+++ b/Fuzzy RD.ipynb
@@ -244,6 +244,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Likelihood of Central Heating by City\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -789,49 +796,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Northern cities p_heating <1 but should be 1\n",
-    "for i in [\"ShandongYantai\", \"LiaoningDalian\", \"Tianjin\", \"Beijing\", \"Baotou\", \"Hohhot\", \"LiaoningBenxi\", \"Turpan\", \"HeilongjiangHarbin\"]:\n",
-    "    print(i)\n",
-    "    print(df[df['city'] == i]['heating_type'].value_counts())\n",
-    "    print(\"***************************************\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shanghai\n",
-      "Convection heating               784\n",
-      "Radiant floor heating            726\n",
-      "Naturally Ventilated             390\n",
-      "Air conditioning heating         200\n",
-      "Small electric heater heating     23\n",
-      "Others                             8\n",
+      "ShandongYantai\n",
+      "Radiator heating        6\n",
+      "Naturally Ventilated    1\n",
       "Name: heating_type, dtype: int64\n",
+      "Residential    6\n",
+      "Office         1\n",
+      "Name: building_type, dtype: int64\n",
       "***************************************\n",
       "\n",
-      "HenanPingdingshan\n",
-      "Naturally Ventilated    4\n",
-      "Radiator heating        1\n",
+      "LiaoningDalian\n",
+      "Radiator heating         1292\n",
+      "Convection heating        278\n",
+      "Radiant floor heating      67\n",
+      "Furnace heating            58\n",
+      "Naturally Ventilated        8\n",
       "Name: heating_type, dtype: int64\n",
+      "Office             1065\n",
+      "Dormitory           468\n",
+      "Residential         112\n",
+      "Rural residence      58\n",
+      "Name: building_type, dtype: int64\n",
       "***************************************\n",
       "\n",
-      "ShaanxiXi'an\n",
-      "Radiant floor heating    594\n",
-      "Radiator heating         585\n",
-      "Convection heating       507\n",
+      "Tianjin\n",
+      "Floor radiation + fan coil    684\n",
+      "Radiator heating               31\n",
+      "Convection heating             15\n",
       "Name: heating_type, dtype: int64\n",
+      "Office    730\n",
+      "Name: building_type, dtype: int64\n",
       "***************************************\n",
       "\n",
+      "Beijing\n",
+      "Radiator heating      494\n",
+      "Convection heating    157\n",
+      "Name: heating_type, dtype: int64\n",
+      "Educational    590\n",
+      "Office          61\n",
+      "Name: building_type, dtype: int64\n",
+      "***************************************\n",
+      "\n",
+      "Baotou\n",
+      "Naturally Ventilated    303\n",
+      "Name: heating_type, dtype: int64\n",
+      "Residential    303\n",
+      "Name: building_type, dtype: int64\n",
+      "***************************************\n",
+      "\n",
+      "Hohhot\n",
+      "Radiator heating    12\n",
+      "Name: heating_type, dtype: int64\n",
+      "Residential    12\n",
+      "Name: building_type, dtype: int64\n",
+      "***************************************\n",
+      "\n",
+      "LiaoningBenxi\n",
+      "Radiant floor heating    21\n",
+      "Radiator heating          1\n",
+      "Name: heating_type, dtype: int64\n",
+      "Residential    22\n",
+      "Name: building_type, dtype: int64\n",
+      "***************************************\n",
+      "\n",
+      "Turpan\n",
+      "Furnace heating         212\n",
+      "Naturally Ventilated     53\n",
+      "self-heating             18\n",
+      "Name: heating_type, dtype: int64\n",
+      "Residential    283\n",
+      "Name: building_type, dtype: int64\n",
+      "***************************************\n",
+      "\n",
+      "HeilongjiangHarbin\n",
+      "Radiator heating         3312\n",
+      "Radiant floor heating     240\n",
+      "Name: heating_type, dtype: int64\n",
+      "Educational    1073\n",
+      "Residential    1037\n",
+      "Office          973\n",
+      "Dormitory       469\n",
+      "Name: building_type, dtype: int64\n",
+      "***************************************\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Northern cities p_heating <1 but should be 1\n",
+    "for i in [\"ShandongYantai\", \"LiaoningDalian\", \"Tianjin\", \"Beijing\", \"Baotou\", \"Hohhot\", \"LiaoningBenxi\", \"Turpan\", \"HeilongjiangHarbin\"]:\n",
+    "    print(i)\n",
+    "    print(df[df['city'] == i]['heating_type'].value_counts())\n",
+    "    print(df[df['city'] == i]['building_type'].value_counts())\n",
+    "    print(\"***************************************\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "HenanLuoyang\n",
       "Convection heating      43\n",
       "Naturally Ventilated     2\n",
@@ -848,44 +923,43 @@
       "Naturally Ventilated    1\n",
       "Name: heating_type, dtype: int64\n",
       "***************************************\n",
-      "\n",
-      "LiaoningDalian\n",
-      "Radiator heating         1292\n",
-      "Convection heating        278\n",
-      "Radiant floor heating      67\n",
-      "Furnace heating            58\n",
-      "Naturally Ventilated        8\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cities nearby the boudnary p_heating 0 but should between 0 and 1\n",
+    "for i in [\"HenanLuoyang\", \"HenanZhengzhou\", \"HenanKaifeng\",]:\n",
+    "    print(i)\n",
+    "    print(df[df['city'] == i]['heating_type'].value_counts())\n",
+    "    print(\"***************************************\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ShaanxiXi'an\n",
+      "Radiant floor heating    594\n",
+      "Radiator heating         585\n",
+      "Convection heating       507\n",
       "Name: heating_type, dtype: int64\n",
       "***************************************\n",
       "\n",
-      "Tianjin\n",
-      "Floor radiation + fan coil    684\n",
-      "Radiator heating               31\n",
-      "Convection heating             15\n",
+      "HenanNanyang\n",
+      "Naturally Ventilated        155\n",
+      "Air conditioning heating     96\n",
       "Name: heating_type, dtype: int64\n",
       "***************************************\n",
       "\n",
-      "Beijing\n",
-      "Radiator heating      494\n",
-      "Convection heating    157\n",
-      "Name: heating_type, dtype: int64\n",
-      "***************************************\n",
-      "\n",
-      "Baotou\n",
-      "Naturally Ventilated    303\n",
-      "Name: heating_type, dtype: int64\n",
-      "***************************************\n",
-      "\n",
-      "LiaoningBenxi\n",
-      "Radiant floor heating    21\n",
-      "Radiator heating          1\n",
-      "Name: heating_type, dtype: int64\n",
-      "***************************************\n",
-      "\n",
-      "Turpan\n",
-      "Furnace heating         212\n",
-      "Naturally Ventilated     53\n",
-      "self-heating             18\n",
+      "HenanPingdingshan\n",
+      "Naturally Ventilated    4\n",
+      "Radiator heating        1\n",
       "Name: heating_type, dtype: int64\n",
       "***************************************\n",
       "\n"
@@ -893,11 +967,20 @@
     }
    ],
    "source": [
-    "# Cities nearby the boudnary p_heating <1 but should be 1\n",
-    "for i in [\"ShaanxiXi'an\", \"HenanPingdingshan\", \"HenanLuoyang\", \"HenanZhengzhou\", \"HenanKaifeng\",]:\n",
+    "# Cities nearby the boudnary p_heating between 0 and 1\n",
+    "# ProfYan: nan yang can be 0\n",
+    "for i in [\"ShaanxiXi'an\", \"HenanNanyang\", \"HenanPingdingshan\"]:\n",
     "    print(i)\n",
     "    print(df[df['city'] == i]['heating_type'].value_counts())\n",
     "    print(\"***************************************\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update the Likelihood\n",
+    "How to update the percentage based on sample size?"
    ]
   },
   {
@@ -906,11 +989,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cities nearby the boudnary p_heating should between 0 and 1\n",
-    "for i in [\"HenanNanyang\"]:\n",
-    "    print(i)\n",
-    "    print(df[df['city'] == i]['heating_type'].value_counts())\n",
-    "    print(\"***************************************\\n\")"
+    "# p_heating for ShaanxiXi'an should also include Radiant floor heating"
    ]
   },
   {
