--- a/Data_cleaning.ipynb
+++ b/Data_cleaning.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,293 @@
     "# only select A4.Season = heating season\n",
     "df_heating = df_rawdata[df_rawdata['A4.Season'] == 'Winter Season']\n",
     "print(\"total heating records:\", len(df_heating))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total Baotou records: 888\n",
+      "Xi’an University of Architecture and Technology    888\n",
+      "Name: A3.Data Contributor, dtype: int64\n",
+      "Winter Season    888\n",
+      "Name: A4.Season, dtype: int64\n",
+      "Radiator heating        887\n",
+      "Naturally Ventilated      1\n",
+      "Name: B4.Building Operation Mode, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check the A3.Data Contributor for rows that have A5.City == Baotou\n",
+    "df_baotou = df_heating[df_heating['A5.City'] == 'Henan Province,Jiaozuo City']\n",
+    "print(\"total Baotou records:\", len(df_baotou))\n",
+    "print(df_baotou['A3.Data Contributor'].value_counts())\n",
+    "print(df_baotou['A4.Season'].value_counts())\n",
+    "print(df_baotou['B4.Building Operation Mode'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>A1.Code</th>\n",
+       "      <th>A2.Date</th>\n",
+       "      <th>A3.Data Contributor</th>\n",
+       "      <th>A4.Season</th>\n",
+       "      <th>A5.City</th>\n",
+       "      <th>A6.Climate Zone</th>\n",
+       "      <th>B1.Building Type</th>\n",
+       "      <th>B2.Building Function</th>\n",
+       "      <th>B3.Floors</th>\n",
+       "      <th>...</th>\n",
+       "      <th>F3.Radiant Temperature Asymmetry (℃)</th>\n",
+       "      <th>F4.PMV</th>\n",
+       "      <th>F5.PPD</th>\n",
+       "      <th>G1.Real-Time Outdoor Temperature (℃)</th>\n",
+       "      <th>G2.Mean Daily Outdoor Temperature (℃)</th>\n",
+       "      <th>G3.Monthly Mean Outdoor Temperature (℃)</th>\n",
+       "      <th>G4.7-Day Running Mean Outdoor Temperature (℃)</th>\n",
+       "      <th>G4.15-Day Running Mean Outdoor Temperature (℃)</th>\n",
+       "      <th>G5.Mean Daily Outdoor Relative Humidity (%)</th>\n",
+       "      <th>G6.Mean Daily Outdoor Air Velocity (m/s)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>DLUT1st0172</td>\n",
+       "      <td>1/30/19 10:35</td>\n",
+       "      <td>Dalian University of Technology</td>\n",
+       "      <td>Winter Season</td>\n",
+       "      <td>Hebei Province,Handan City</td>\n",
+       "      <td>Cold zone</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Bedroom</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>-0.58</td>\n",
+       "      <td>12.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>DLUT1st0173</td>\n",
+       "      <td>1/30/19 10:42</td>\n",
+       "      <td>Dalian University of Technology</td>\n",
+       "      <td>Winter Season</td>\n",
+       "      <td>Hebei Province,Handan City</td>\n",
+       "      <td>Cold zone</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Bedroom</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>-0.10</td>\n",
+       "      <td>5.19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>DLUT1st0174</td>\n",
+       "      <td>1/30/19 10:45</td>\n",
+       "      <td>Dalian University of Technology</td>\n",
+       "      <td>Winter Season</td>\n",
+       "      <td>Hebei Province,Handan City</td>\n",
+       "      <td>Cold zone</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Bedroom</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>-0.66</td>\n",
+       "      <td>14.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>DLUT1st0175</td>\n",
+       "      <td>1/30/19 10:47</td>\n",
+       "      <td>Dalian University of Technology</td>\n",
+       "      <td>Winter Season</td>\n",
+       "      <td>Hebei Province,Handan City</td>\n",
+       "      <td>Cold zone</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Bedroom</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>7.78</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>DLUT1st0176</td>\n",
+       "      <td>1/31/19 20:20</td>\n",
+       "      <td>Dalian University of Technology</td>\n",
+       "      <td>Winter Season</td>\n",
+       "      <td>Hebei Province,Handan City</td>\n",
+       "      <td>Cold zone</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Bedroom</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>-0.82</td>\n",
+       "      <td>19.45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 43 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID      A1.Code        A2.Date              A3.Data Contributor  \\\n",
+       "0   1  DLUT1st0172  1/30/19 10:35  Dalian University of Technology   \n",
+       "1   2  DLUT1st0173  1/30/19 10:42  Dalian University of Technology   \n",
+       "2   3  DLUT1st0174  1/30/19 10:45  Dalian University of Technology   \n",
+       "3   4  DLUT1st0175  1/30/19 10:47  Dalian University of Technology   \n",
+       "4   5  DLUT1st0176  1/31/19 20:20  Dalian University of Technology   \n",
+       "\n",
+       "       A4.Season                     A5.City A6.Climate Zone B1.Building Type  \\\n",
+       "0  Winter Season  Hebei Province,Handan City       Cold zone      Residential   \n",
+       "1  Winter Season  Hebei Province,Handan City       Cold zone      Residential   \n",
+       "2  Winter Season  Hebei Province,Handan City       Cold zone      Residential   \n",
+       "3  Winter Season  Hebei Province,Handan City       Cold zone      Residential   \n",
+       "4  Winter Season  Hebei Province,Handan City       Cold zone      Residential   \n",
+       "\n",
+       "  B2.Building Function  B3.Floors  ... F3.Radiant Temperature Asymmetry (℃)  \\\n",
+       "0              Bedroom        1.0  ...                                 0.74   \n",
+       "1              Bedroom        1.0  ...                                 0.74   \n",
+       "2              Bedroom        1.0  ...                                 0.74   \n",
+       "3              Bedroom        1.0  ...                                 0.74   \n",
+       "4              Bedroom        1.0  ...                                 1.12   \n",
+       "\n",
+       "  F4.PMV F5.PPD G1.Real-Time Outdoor Temperature (℃)  \\\n",
+       "0  -0.58  12.01                                  NaN   \n",
+       "1  -0.10   5.19                                  NaN   \n",
+       "2  -0.66  14.14                                  NaN   \n",
+       "3  -0.36   7.78                                  NaN   \n",
+       "4  -0.82  19.45                                  NaN   \n",
+       "\n",
+       "  G2.Mean Daily Outdoor Temperature (℃)  \\\n",
+       "0                                  -2.9   \n",
+       "1                                  -2.9   \n",
+       "2                                  -2.9   \n",
+       "3                                  -2.9   \n",
+       "4                                   0.6   \n",
+       "\n",
+       "   G3.Monthly Mean Outdoor Temperature (℃)  \\\n",
+       "0                                      0.4   \n",
+       "1                                      0.4   \n",
+       "2                                      0.4   \n",
+       "3                                      0.4   \n",
+       "4                                      0.4   \n",
+       "\n",
+       "   G4.7-Day Running Mean Outdoor Temperature (℃)  \\\n",
+       "0                                            1.2   \n",
+       "1                                            1.2   \n",
+       "2                                            1.2   \n",
+       "3                                            1.2   \n",
+       "4                                            0.5   \n",
+       "\n",
+       "   G4.15-Day Running Mean Outdoor Temperature (℃)  \\\n",
+       "0                                             1.0   \n",
+       "1                                             1.0   \n",
+       "2                                             1.0   \n",
+       "3                                             1.0   \n",
+       "4                                             0.2   \n",
+       "\n",
+       "   G5.Mean Daily Outdoor Relative Humidity (%)  \\\n",
+       "0                                          NaN   \n",
+       "1                                          NaN   \n",
+       "2                                          NaN   \n",
+       "3                                          NaN   \n",
+       "4                                          NaN   \n",
+       "\n",
+       "   G6.Mean Daily Outdoor Air Velocity (m/s)  \n",
+       "0                                       NaN  \n",
+       "1                                       NaN  \n",
+       "2                                       NaN  \n",
+       "3                                       NaN  \n",
+       "4                                       NaN  \n",
+       "\n",
+       "[5 rows x 43 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_heating.head()"
    ]
   },
   {
