--- a/Data_cleaning.ipynb
+++ b/Data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "       'Henan Province, Luoyang City'], dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "       'FujianProvinceNanpingCity'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,14 +716,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15992, 24)\n"
+      "(15992, 25)\n"
      ]
     },
     {
@@ -752,32 +752,33 @@
        "top                      float64\n",
        "tr                       float64\n",
        "t_out_min                float64\n",
+       "t_out_monthly            float64\n",
        "latitude                 float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# select a sbuset of columns\n",
-    "df_heating_1 = df_heating[['suject_id', 'timestamp', 'season', 'city', 'climate', 'building_type', 'heating_type', 'gender', 'age', 'ht', 'wt', 'thermal_sensation', 'thermal_comfort', 'thermal_acceptability', 'clo', 'met', 'ta', 'rh', 'vel', 'tg', 'top', 'tr', 't_out_min', 'latitude']]\n",
+    "df_heating_1 = df_heating[['suject_id', 'timestamp', 'season', 'city', 'climate', 'building_type', 'heating_type', 'gender', 'age', 'ht', 'wt', 'thermal_sensation', 'thermal_comfort', 'thermal_acceptability', 'clo', 'met', 'ta', 'rh', 'vel', 'tg', 'top', 'tr', 't_out_min', 't_out_monthly', 'latitude']]\n",
     "print(df_heating_1.shape)\n",
     "df_heating_1.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v0/03v41tbn7072cjr0b3ddfgjw0000gn/T/ipykernel_67950/2292325144.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/v0/03v41tbn7072cjr0b3ddfgjw0000gn/T/ipykernel_66373/2292325144.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +815,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -850,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +868,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -917,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -946,12 +947,13 @@
        "top                       float64\n",
        "tr                        float64\n",
        "t_out_min                 float64\n",
+       "t_out_monthly             float64\n",
        "latitude                  float64\n",
        "age_group                category\n",
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +983,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1032,12 +1034,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_heating_1.to_csv('CN_DB.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
